--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -34,7 +34,9 @@
   },
   "eslintConfig": {
     "root": true,
-    "extends": ["@acme/eslint-config/base"]
+    "extends": [
+      "@acme/eslint-config/base"
+    ]
   },
   "prettier": "@acme/prettier-config"
 }
