--- a/apps/nextjs/package.json
+++ b/apps/nextjs/package.json
@@ -24,14 +24,15 @@
     "@trpc/react-query": "11.0.0-next.320",
     "@trpc/server": "11.0.0-next.320",
     "@xixixao/uploadstuff": "^0.0.5",
+    "convex": "^1.12.1",
+    "date-fns": "^3.3.1",
     "geist": "^1.3.0",
     "next": "^14.1.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "date-fns": "^3.3.1",
-    "superjson": "2.2.1",
     "react-icons": "^5.0.1",
     "recharts": "^2.12.3",
+    "superjson": "2.2.1",
     "zod": "^3.22.4"
   },
   "devDependencies": {
