--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -30,7 +30,7 @@
     "@types/bcryptjs": "^2.4.6",
     "eslint": "^8.57.0",
     "prettier": "^3.2.5",
-    "typescript": "^5.4.3"
+    "typescript": "5.4.3"
   },
   "eslintConfig": {
     "root": true,
