--- a/apps/nextjs/package.json
+++ b/apps/nextjs/package.json
@@ -48,7 +48,7 @@
     "jiti": "^1.21.0",
     "prettier": "^3.2.5",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5.4.3"
+    "typescript": "5.4.3"
   },
   "eslintConfig": {
     "root": true,
