--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -14,14 +14,14 @@
     "typecheck": "tsc --noEmit --emitDeclarationOnly false"
   },
   "dependencies": {
-    "@trpc/server": "11.0.0-next.320",
-    "superjson": "2.2.1",
-    "zod": "^3.22.4",
+    "@convex-dev/convex-lucia-auth": "^0.0.4",
     "@novu/node": "^0.24.0",
+    "@trpc/server": "11.0.0-next.320",
     "bcryptjs": "^2.4.3",
     "convex": "^1.10.0",
     "nanoid": "^5.0.6",
-    "@convex-dev/convex-lucia-auth": "^0.0.4"
+    "superjson": "2.2.1",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@acme/eslint-config": "*",
