--- a/apps/nextjs/package.json
+++ b/apps/nextjs/package.json
@@ -16,7 +16,7 @@
   "dependencies": {
     "@acme/api": "*",
     "@acme/ui": "*",
-    "@convex-dev/convex-lucia-auth": "^0.0.4",
+    "@convex-dev/convex-lucia-auth": "0.0.4",
     "@hookform/resolvers": "^3.3.4",
     "@t3-oss/env-nextjs": "^0.9.2",
     "@tanstack/react-query": "^5.28.6",
