--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -14,11 +14,11 @@
     "typecheck": "tsc --noEmit --emitDeclarationOnly false"
   },
   "dependencies": {
-    "@convex-dev/convex-lucia-auth": "^0.0.4",
+    "@convex-dev/convex-lucia-auth": "0.0.4",
     "@novu/node": "^0.24.0",
     "@trpc/server": "11.0.0-next.320",
     "bcryptjs": "^2.4.3",
-    "convex": "^1.10.0",
+    "convex": "^1.12.1",
     "nanoid": "^5.0.6",
     "superjson": "2.2.1",
     "zod": "^3.22.4"
