--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -65,7 +65,7 @@
     "prettier": "^3.2.5",
     "react": "18.2.0",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5.4.3",
+    "typescript": "5.4.3",
     "zod": "^3.22.4"
   },
   "peerDependencies": {
@@ -73,7 +73,10 @@
     "zod": "^3.22.4"
   },
   "eslintConfig": {
-    "extends": ["@acme/eslint-config/base", "@acme/eslint-config/react"]
+    "extends": [
+      "@acme/eslint-config/base",
+      "@acme/eslint-config/react"
+    ]
   },
   "prettier": "@acme/prettier-config"
 }
