--- a/tooling/tailwind/package.json
+++ b/tooling/tailwind/package.json
@@ -25,7 +25,7 @@
     "@acme/tsconfig": "*",
     "eslint": "^8.57.0",
     "prettier": "^3.2.5",
-    "typescript": "^5.4.3"
+    "typescript": "5.4.3"
   },
   "eslintConfig": {
     "root": true,
