fix: fixed convex package version out of order issues

--- a/package.json
+++ b/package.json
@@ -28,5 +28,9 @@
     "lint:ws": "bunx sherif@latest",
     "typecheck": "turbo typecheck"
   },
-  "workspaces": ["apps/*", "packages/*", "tooling/*"]
+  "workspaces": [
+    "apps/*",
+    "packages/*",
+    "tooling/*"
+  ]
 }
