--- a/apps/webapp/package.json
+++ b/apps/webapp/package.json
@@ -23,6 +23,8 @@
     "@radix-ui/react-tabs": "^1.0.4",
     "@radix-ui/react-toast": "^1.1.5",
     "@t3-oss/env-nextjs": "^0.9.2",
+    "@twa-dev/sdk": "^7.0.0",
+    "@twa-dev/types": "^7.0.0",
     "@vercel/analytics": "^1.3.1",
     "@vercel/speed-insights": "^1.0.12",
     "class-variance-authority": "^0.7.0",
