--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -19,6 +19,7 @@
     "@trpc/server": "11.0.0-next.320",
     "bcryptjs": "^2.4.3",
     "convex": "^1.12.1",
+    "create-hmac": "^1.1.7",
     "nanoid": "^5.0.6",
     "superjson": "2.2.1",
     "zod": "^3.22.4"
@@ -28,6 +29,7 @@
     "@acme/prettier-config": "*",
     "@acme/tsconfig": "*",
     "@types/bcryptjs": "^2.4.6",
+    "@types/create-hmac": "^1.1.3",
     "eslint": "^8.57.0",
     "prettier": "^3.2.5",
     "typescript": "5.4.3"
